--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"MahmoudTheDevu9hi.aternos.me",
-	"port": "28580",
-	"name": "NotABot",
+	"ip":"SANJI_Jave.aternos.me",
+	"port": "29986",
+	"name": "Dev_SANJI",
 	"auto-night-skip":"true"
 }
